--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-欢迎来到陈德勇的个人博客
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="zh-CN" xml:lang="zh-CN" xmlns="http://www.w3.org/1999/xhtml">
+
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=GB2312" />
+</head>
+<body>
+
+<h1>陈德勇的个人博客</h1>
+
+<p>欢迎来到我的博客，这是我第一次用GitHub创建个人博客，请大家多多指导。</p>
+
+</body>
+</html>
