--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>陈德勇的个人博客</h1>
 
 <p>欢迎来到我的博客，这是我第一次用GitHub创建个人博客，请大家多多指导。</p>
+<p>欢迎来到我的博客，这是我第一次用GitHub创建个人博客，请大家多多指导。</p>
 
 </body>
 </html>
