--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
 
 <h1>陈德勇的个人博客</h1>
 
-<p>欢迎来到我的博客，这是我第一次用GitHub创建个人博客，请大家多多指导。</p>
-<p>欢迎来到我的博客，这是我第一次用GitHub创建个人博客，请大家多多指导。</p>
+<p>git使用
+一、简介
+	这篇文章主要分享一下git在开发中和使用和常用到的git命令。git是一个分布式的版本控制软件，通常是本地仓库开发，然后同步到远程仓库上，也可以只单独使用本地仓库。远程仓库的话可以自己搭建服务器，也可以使用github或者gitee托管平台。</p>
+
+<p>二、使用github模拟开发
+2.1 创建项目仓库
+2.1.1 本地仓库
+	如果只是个人开发，只创建本地仓库即可单独对你的项目进行版本控制，但是如果你想随时随地或者多人开发，就需要用到远程仓库了。</p>
+
+<p>1、cd /dir/git  //进入一个新的目录
+2、git init     //创建一个新的仓库或者重新初始化已经存在的仓库</p>
+
+<p>2.1.2 远程仓库
+		可以直接在github上创建一个新的仓库，会生成一个URL：git@github.com:Pokkis/Test03.git，也可以在github上邀请其他人参与开发这个项目。</p>
+
+<p>2.2 拉取代码
+这时候你有两种方式可以拉取到这个项目代码：
+1、你可以本地先创建一个仓库,然后拉取项目代码。</p>
+
+<p>xxxxxxxxxx</p>
+
+<p>git init //这里没有指定分支，默认初始化的主分支
+git pull git@github.com:Pokkis/Test03.git  //这里也没有指定分支</p>
+
+<p>2.3 上传代码</p>
+
+<p>2.4 创建分支</p>
+
+<p>2.5 切换分支</p>
+
+<p>2.6 合并分支</p>
 
 </body>
 </html>
